// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallToAction renders a button only 1`] = `
<div
  className="btnOnly"
>
  <div
    className="ctaContainer"
    id="call-to-action"
  >
    <div
      className="image"
    >
      <div
        style={
          Object {
            "background": "url(http://example.com/someImage.jpg) no-repeat center center",
            "backgroundSize": "cover",
            "height": "100%",
            "width": "100%",
          }
        }
        title="alt text for image"
      />
    </div>
    <div
      className="contentContainer"
    >
      <h4
        className="headline"
      >
        This is the headline for the CTA.
      </h4>
      <p
        className="blurb"
      >
        This is the blurb for the CTA.
      </p>
      <a
        className="alternate primary link spacing"
        onClick={[Function]}
        style={Object {}}
      >
        Call To Action
      </a>
    </div>
    <img
      alt=""
      className="cornerGraphicLarge"
      src="test-file-stub"
    />
    <img
      alt=""
      className="cornerGraphicSmall"
      src="test-file-stub"
    />
  </div>
</div>
`;

exports[`CallToAction renders a large size 1`] = `
<div
  className="large"
>
  <div
    className="ctaContainer"
    id="call-to-action"
  >
    <div
      className="image"
    >
      <div
        style={
          Object {
            "background": "url(http://example.com/someImage.jpg) no-repeat center center",
            "backgroundSize": "cover",
            "height": "100%",
            "width": "100%",
          }
        }
        title="alt text for image"
      />
    </div>
    <div
      className="contentContainer"
    >
      <h4
        className="headline"
      >
        This is the headline for the CTA.
      </h4>
      <p
        className="blurb"
      >
        This is the blurb for the CTA.
      </p>
      <a
        className="alternate primary link spacing"
        onClick={[Function]}
        style={Object {}}
      >
        Call To Action
      </a>
    </div>
    <img
      alt=""
      className="cornerGraphicLarge"
      src="test-file-stub"
    />
    <img
      alt=""
      className="cornerGraphicSmall"
      src="test-file-stub"
    />
  </div>
</div>
`;

exports[`CallToAction renders a medium size 1`] = `
<div
  className="medium"
>
  <div
    className="ctaContainer"
    id="call-to-action"
  >
    <div
      className="image"
    >
      <div
        style={
          Object {
            "background": "url(http://example.com/someImage.jpg) no-repeat center center",
            "backgroundSize": "cover",
            "height": "100%",
            "width": "100%",
          }
        }
        title="alt text for image"
      />
    </div>
    <div
      className="contentContainer"
    >
      <h4
        className="headline"
      >
        This is the headline for the CTA.
      </h4>
      <p
        className="blurb"
      >
        This is the blurb for the CTA.
      </p>
      <a
        className="alternate primary link spacing"
        onClick={[Function]}
        style={Object {}}
      >
        Call To Action
      </a>
    </div>
    <img
      alt=""
      className="cornerGraphicLarge"
      src="test-file-stub"
    />
    <img
      alt=""
      className="cornerGraphicSmall"
      src="test-file-stub"
    />
  </div>
</div>
`;

exports[`CallToAction renders a small size 1`] = `
<div
  className="small"
>
  <div
    className="ctaContainer"
    id="call-to-action"
  >
    <div
      className="image"
    >
      <div
        style={
          Object {
            "background": "url(http://example.com/someImage.jpg) no-repeat center center",
            "backgroundSize": "cover",
            "height": "100%",
            "width": "100%",
          }
        }
        title="alt text for image"
      />
    </div>
    <div
      className="contentContainer"
    >
      <h4
        className="headline"
      >
        This is the headline for the CTA.
      </h4>
      <p
        className="blurb"
      >
        This is the blurb for the CTA.
      </p>
      <a
        className="alternate primary link spacing"
        onClick={[Function]}
        style={Object {}}
      >
        Call To Action
      </a>
    </div>
    <img
      alt=""
      className="cornerGraphicLarge"
      src="test-file-stub"
    />
    <img
      alt=""
      className="cornerGraphicSmall"
      src="test-file-stub"
    />
  </div>
</div>
`;
